[gd_scene load_steps=9 format=3 uid="uid://cvnlxf8mywvy4"]

[ext_resource type="Script" uid="uid://d1k02qjmht0mm" path="res://code/upgrade_ui.gd" id="1_mki6m"]
[ext_resource type="Texture2D" uid="uid://cnvjc4tfasicn" path="res://assets/images/icon.svg" id="2_3hdy0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp3eg"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqmmt"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.10486025, 0.32567134, 0.1516718, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.024068454, 0.12871674, 0.045796193, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yc10j"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.13930729, 0.4068294, 0.1968534, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.04180742, 0.17964527, 0.07480732, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jscy8"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.17789873, 0.5036648, 0.24846882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.08768315, 0.29214233, 0.13676047, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pm3ni"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.21230483, 0.21230483, 0.21230483, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.024068454, 0.12871674, 0.045796193, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dp3eg"]

[node name="UpgradeUI" type="PanelContainer"]
custom_minimum_size = Vector2(320, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_dp3eg")
script = ExtResource("1_mki6m")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_3hdy0")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LabelName" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
text = "Example Upgrade Name"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="LabelPrice" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Price: 100"

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_gqmmt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yc10j")
theme_override_styles/hover = SubResource("StyleBoxFlat_jscy8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pm3ni")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dp3eg")
text = "Buy"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_pressed"]
